# ScientoPy

./: .gitignore  CLAUDE.md  LICENSE.txt  PreProcessClass.py  README.md  ScientoPyClass.py  ScientoPyGui.py  ScientoPyGui.spec  analizeTopic.py  exampleGenerateGraphs.sh  exportPapers.py  generateBibtex.py  generateGraphs.sh  getFromScopus.py  getFromScopus2.py  getFromWoS.py  globalVar.py  graphUtils.py  paperDB.py  paperIO.py  paperSave.py  paperUtils.py  parametrics.sh  preProcess.py  pyproject.toml  requirements.txt  scientoPy.py  topCited.py  topResults.py  trendResults.py  version_info.py  winBuildScientoPyGui.spec
.signpath/: artifact-configuration.xml
dataInExample/: scientopy_scopus_'Bluetooth_low_energy'_000-001830.csv  scientopy_wos_'Bluetooth_low_energy'_000-000500.csv  scientopy_wos_'Bluetooth_low_energy'_001-001000.csv  scientopy_wos_'Bluetooth_low_energy'_002-001313.csv  scopus.csv  searchCriteria.txt  wos.txt  wos_1000.txt  wos_1001_1500.txt  wos_1501_2000.txt  wos_1_500.txt  wos_2000.txt  wos_2001_2500.txt  wos_2026_04_02_1000.txt  wos_2026_04_02_2000.txt  wos_2026_04_02_3000.txt  wos_2026_04_02_4000.txt  wos_2026_04_02_4071.txt  wos_2501_3000.txt  wos_3000.txt  wos_3001_3500.txt  wos_3054.txt  wos_3501_4000.txt  wos_4001_4500.txt  wos_4501_5000.txt  wos_5001_5500.txt  wos_501_1000.txt  wos_5501_6000.txt  wos_6500_6525.txt
doc/: behavioral_test_spec.md  distribution_spec.md  performance_improvement_spec.md  ui_modernization_spec.md
latexExample/: .gitignore  article_example.tex
tests/: generate_test_data.py  run_behavioral_tests.py  test_unit.py
(+59 files in other folders)
