[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scientopy"
version = "3.0.0"
description = "Scientometrics analysis tool for exploring research trends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Juan Ruiz-Rosero", email = "jpruiz@unicauca.edu.co" },
]
keywords = ["scientometrics", "bibliometrics", "research", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "unidecode>=1.3",
    "Pillow>=9.5",
    "wordcloud>=1.9",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]
dev = ["pytest>=7.0"]

[project.scripts]
scientopy = "scientoPy:main"
scientopy-preprocess = "preProcess:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
